# Vault

./: .gitignore  CLA.md  README.md
.github/workflows/: docker-publish.yml
bootstrap-pipeline/: pyproject.toml
bootstrap-pipeline/src/bootstrap_pipeline/: cli.py  filters.py  ingest.py  models.py
bootstrap-pipeline/src/bootstrap_pipeline.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
knowledge-mcp/: .dockerignore  .gitignore  Dockerfile  README.md  TESTING.md  package-lock.json  package.json
knowledge-mcp/src/: index.ts
knowledge-service/: .dockerignore  .env.example  Dockerfile  HANDOFF.md  README.md  docker-compose.test.yml  docker-compose.yml  entrypoint.sh  pyproject.toml  requirements.txt
knowledge-service/defaults/_schema/: schema.yaml
knowledge-service/scripts/: migrate_add_uuids.py
knowledge-service/src/: errors.py  main.py
knowledge-service/src/api/: models.py  routes.py
knowledge-service/src/config/: __init__.py  settings.py  type_registry.py
knowledge-service/src/layer1/: fallback_store.py  fts_engine.py  interface.py  qmd_adapter.py
knowledge-service/src/layer2/: dedup.py  frontmatter.py  git_writer.py  link_navigator.py  mode_filter.py  schema.py  scope.py  scope_chain.py  suggester.py  (+2 more)
knowledge-service/tests/: conftest.py  test_schema_loader.py
knowledge-service/types/: _base.yaml  concept.yaml  guide.yaml  keystone.yaml  learning.yaml  procedure.yaml  repo-profile.yaml
vault-router/: Dockerfile  docker-compose.yml
vault-router/src/: client.py  fan_out.py  main.py  routes.py  settings.py  uuid_registry.py
(+18 files in other folders)
